--- a/src/components/Encrypt.module.css
+++ b/src/components/Encrypt.module.css
@@ -15,15 +15,13 @@
   display: flex;
   flex-direction: row;
   max-width: 100%;
-  justify-content: space-evenly;
 }
 
 .documentPanel {
-  flex: 1;
 }
 
 .buttonPanel {
-  flex: 0.2;
+  padding: 1rem;
 }
 
 .cryptoPanel {
@@ -35,6 +33,6 @@
 }
 
 .key {
-  font-size: 50%;
+  font-size: 80%;
   font-family: 'Courier New', Courier, monospace;
 }
